# langgraph_documentation_RAG

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  document_ingestion.ipynb  example.env  main.py  publication.md  pyproject.toml  test_end_to_end.ipynb
outputs/parsed_docs/code_blocks/: 1-build-basic-chatbot_codeblocks.txt  2-add-tools_codeblocks.txt  3-add-memory_codeblocks.txt  4-human-in-the-loop_codeblocks.txt  5-customize-state_codeblocks.txt  6-time-travel_codeblocks.txt  CONTRIBUTING_codeblocks.txt  GRAPH_RECURSION_LIMIT_codeblocks.txt  INVALID_CONCURRENT_GRAPH_UPDATE_codeblocks.txt  INVALID_GRAPH_NODE_RETURN_VALUE_codeblocks.txt  README_codeblocks.txt  add-human-in-the-loop_codeblocks.txt  add_auth_server_codeblocks.txt  agents_codeblocks.txt  api_ref_codeblocks.txt  application_structure_codeblocks.txt  assistants_codeblocks.txt  auth_codeblocks.txt  background_run_codeblocks.txt  channels_codeblocks.txt  chat_model_tabs_codeblocks.txt  checkpoints_codeblocks.txt  cli_codeblocks.txt  config_codeblocks.txt  configurable_headers_codeblocks.txt  configuration_cloud_codeblocks.txt  configure_ttl_codeblocks.txt  constants_codeblocks.txt  context_codeblocks.txt  cron_jobs_codeblocks.txt  custom_auth_codeblocks.txt  custom_docker_codeblocks.txt  custom_lifespan_codeblocks.txt  custom_middleware_codeblocks.txt  custom_routes_codeblocks.txt  double_texting_codeblocks.txt  durable_execution_codeblocks.txt  enqueue_concurrent_codeblocks.txt  evals_codeblocks.txt  func_codeblocks.txt  (+60 more)
outputs/parsed_docs/text_blocks/: 1-build-basic-chatbot_text.txt  2-add-tools_text.txt  3-add-memory_text.txt  4-human-in-the-loop_text.txt  5-customize-state_text.txt  6-time-travel_text.txt  CONTRIBUTING_text.txt  GRAPH_RECURSION_LIMIT_text.txt  INVALID_CHAT_HISTORY_text.txt  INVALID_CONCURRENT_GRAPH_UPDATE_text.txt  INVALID_GRAPH_NODE_RETURN_VALUE_text.txt  (+125 more)
prompts/: config.yaml  core.py  rag_system_prompt.yml  template.yml  topic_guard.yml
publication/: rag_publication.md
qdrant_storage/: raft_state.json
rag_pipeline/: core.py  utils.py
test_notebooks/: prompt_template_example.ipynb  rag_example.ipynb
vector_database/notebooks/: vector_database_demo.ipynb
vector_database/src/: config.yaml  document_loader.py  documentation_loader.py  main_.py  paths.py  text_splitter.py  utils.py  vector_store.py
vector_database/tests/: chunk_preview.py  clone_repo.py
