[tool.poetry]
name = "langgraph-documentation-rag"
version = "0.1.0"
description = "RAG implementation using LangGraph"
authors = ["MAQuesada <malejandroquesada@gmail.com>"]
readme = "README.md"


packages = [
    {include = "prompts"},
    {include = "vector_database"},
    {include = "rag_pipeline"}
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain-core = ">=0.3.63,<0.4.0"
langchain = "^0.3.25"
langchain-openai = ">=0.3.19,<0.4.0"
pydantic = ">=2.11.5,<3.0.0"
python-dotenv = "^1.1.0"
langgraph = "^0.4.8"
requests = "^2.32.3"
markdown = "^3.8"
qdrant-client = "^1.14.2"
pypdf = "^5.6.0"
python-docx = "^1.1.2"
jupyter = "^1.1.1"
gitpython = "^3.1.44"
markdown-analysis = "^0.1.5"
mrkdwn-analysis = "^0.1.6"
psycopg-pool = "^3.2.6"
langgraph-checkpoint-postgres = "^2.0.21"
psycopg = {extras = ["binary"], version = "^3.2.9"}
langchain-community = "^0.3.25"
openai = "^1.85.0"
langchain-experimental = "^0.3.4"
langchain-qdrant = "^0.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
notebook = "^7.4.3"
ipykernel = "^6.29.5"
